# peelmesh

./: CMakeLists.txt  LICENSE  README.md  shields.json
.github/workflows/: build.yml
cmake/: peelmeshConfig.cmake.in
examples/: CMakeLists.txt  demo.cpp  example.cpp  psb_experiment.cpp  python_example.ipynb
examples/peelmesh/: portable-file-dialogs.h  utility.cpp  utility.hpp  visualization.hpp  window.hpp
include/peelmesh/: geometry.hpp  kdtree.hpp  path.hpp  pipeline.hpp  solver.hpp
peelmesh/: meshio.hpp
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt  peelmesh_module.cpp
src/peelmesh/: geometry.cpp  kdtree.cpp  meshio.cpp  path.cpp  pipeline.cpp  solver.cpp
tests/: BoundaryMesh.cpp  CMakeLists.txt  WatertightMesh.cpp  kdtree.cpp
